--- a/index.html
+++ b/index.html
@@ -6,13 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <<link rel="stylesheet" href="css/styles.css"></link>
+    <link rel="stylesheet" href="css/styles.css"></link>
   </head>
   <header>
-
+    <section class="container space">
+      <div class="row">
+        <div class="col-md-2">
+          <div class="nav-brand">
+            <img class="img-responsive" src="img/enn.png" alt="#">
+          </div>
+        </div>
+        <div class="col-md-5 col-md-offset-5">
+          <ul class="nav nav-pills nav-links">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">Profile</a></li>
+            <li role="presentation"><a href="#">Messages</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </header>
   <body>
-
+    <hero>
+      <section class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="jumbotron">
+              <h1>Hello, world!</h1>
+              <p>...</p>
+              <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </hero>
+    <main>
+      <section class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="well well-sm">main content</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+        </div>
+      </section>
+    </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/java.js"></script>
