--- a/index.html
+++ b/index.html
@@ -43,19 +43,22 @@
     <main>
       <section class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-2">
             <div class="well well-sm">main content</div>
           </div>
+          <div class="col-md-10">
+
+          </div>
         </div>
-        <div class="row">
-          <div class="col-md-6"></div>
-          <div class="col-md-3"></div>
-          <div class="col-md-3"></div>
+        <div class="row text-back space">
+          <div class="col-md-6"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p> </div>
+          <div class="col-md-3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam numquam exercitationem iusto, odio libero esse, atque eveniet, vitae cum autem eos molestias nihil nisi sequi ducimus doloribus. Harum, consequatur, autem.</p></div>
+          <div class="col-md-3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis fugit quisquam fuga iure ratione, maxime, ipsum dolorem nesciunt beatae esse odit harum repellat facere nostrum ex voluptatem nulla omnis aliquam!</p></div>
         </div>
-        <div class="row">
-          <div class="col-md-6"></div>
-          <div class="col-md-3"></div>
-          <div class="col-md-3"></div>
+        <div class="row text-back space">
+          <div class="col-md-6"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi atque cum maxime dolores enim nam laboriosam, earum dolor, ipsam dignissimos veniam beatae quisquam eos! Quae molestiae, quaerat quasi. Rerum, in! ipsum dolor sit amet, consectetur adipisicing elit. Ut cum distinctio hic modi, dolore ipsa exercitationem placeat officiis alias libero, ipsam quo ullam reprehenderit accusantium atque blanditiis id a facere.</p></div>
+          <div class="col-md-3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eos, ipsum. Voluptas minus nemo, exercitationem nostrum in esse quis, ab totam tenetur blanditiis quia sequi fugit harum dolor enim, iste.</p></div>
+          <div class="col-md-3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quidem at maxime vero. Ducimus molestias distinctio soluta, rerum eaque? Aut consectetur fuga quas harum quos soluta, molestias ducimus ea laborum.</p></div>
         </div>
       </section>
     </main>
